[package]
name = "kipa"
version = "0.1.2"
authors = ["Misha Wagner <mishajw@gmail.com>"]
build = "build.rs"
description = "Distributed Key to IP Address (KIPA) query network"
repository = "https://github.com/mishajw/kipa"
readme = "README.md"
keywords = ["distributed", "network", "dns"]
license = "GPL-3.0"

[lib]
name = "kipa_lib"
path = "src/lib.rs"

[[bin]]
name = "kipa_cli"
path = "src/cli.rs"

[[bin]]
name = "kipa_daemon"
path = "src/daemon.rs"

[features]
default = ["use-protobuf", "use-tcp", "use-unix-socket", "use-graph"]
use-protobuf = []
use-tcp = []
use-unix-socket = []
use-graph = []
use-black-hole = []
use-random-response = []
use-remotery = ["remotery"]

[dependencies]
error-chain = "*"
protobuf = "*"
gpgme = "*"
clap = "*"
byteorder = "*"
pnet = "0.22.0"
slog-term = "*"
slog-async = "*"
slog-json = "*"
rand = "*"
spectral = "*"
regex = "*"
lazy_static = "*"
periodic = "*"
threadpool = "*"
num_cpus = "*"

remotery = { version = "*", optional = true }

[dependencies.slog]
version = "*"
default-features = false
features = ["release_max_level_trace", "max_level_trace"]

[build-dependencies]
protoc-rust = "*"

